# mergeLines

./: .gitignore  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  main.cpp  take_home_test
deserialize/: BUILD  deserialize.cpp  deserialize.h
helpers/: BUILD  helpers.cpp
include/rapidjson/: BUILD
include/take_home_test/: deser.h  deserialize.h  helpers.h  lineMerger.h  line_merger.h  serialize.h
lineMerger/: BUILD  lineMerger.cpp  lineMerger.h
rapidjson/: deps.bzl  repos.bzl
serialize/: serialize.cpp  serialize.h
source/: deserialize.cpp  lineMerger.cpp  main.cpp
source/take_home_test/: deser.cpp  deserialize.cpp  helpers.cpp  line_merger.cpp
test/: test_helpers.cpp  tests.cpp
test/assets/: 1-output.json
visualize/: visualize_input.py  visualize_output.py
